# INBS

Lab1/: INBS-1.docx  main  main.cpp
Lab2/: CMakeLists.txt  INBS-2.docx
Lab2/apps/: auth_server.cpp  client.cpp  test_server.cpp
Lab2/src/: common.cpp  common.h  des.cpp  des.h
Lab3/: .clang-format  CMakeLists.txt  INBS-3.docx  client.cpp  server.cpp
